feat: initial navbar construction

--- a/index.html
+++ b/index.html
@@ -3,11 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Urban Home</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div>
-        
+        <nav class="navbar">
+            <div class="logo-container">
+                <div class="logo-roof">
+
+                </div>
+                <div class="logo-text">
+
+                </div>
+            </div>
+        </nav>
     </div>
     
 </body>
