feat: done logo on navbar

--- a/index.html
+++ b/index.html
@@ -14,11 +14,20 @@
         <nav class="navbar">
             <div class="logo-container">
                 <div class="logo-roof">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="72" height="24" viewBox="0 0 108 32" fill="none">
+                        <path d="M1 30.1415L107.625 2.30808" stroke="#D39817" stroke-width="3"/>
+                      </svg>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="72" height="24" viewBox="0 0 108 32" fill="none">
+                        <path d="M107.141 29.8334L0.515814 1.99997" stroke="black" stroke-width="3"/>
+                      </svg>
 
                 </div>
                 <div class="logo-text">
-                    <h1>Urban <span>Home</span></h1>
+                    <h1>Urban<span>Home</span></h1>
                 </div>
+            </div>
+            <div class="product-category">
+                <a href=""><h1>Kategori produk</h1></a>
             </div>
         </nav>
     </div>
