--- a/index.html
+++ b/index.html
@@ -48,7 +48,18 @@
                 <button class="signupButton">sign up</button>
             </div>
         </nav>
+        <div class="carousel">
+            <div class="carousel-slides">
+              <div class="slide">
+                <img src="img-1.png" alt="">
+              </div>
+              <div class="slide">
+                <img src="img-2.png" alt="">
+              </div>
+            </div>
+          </div>
+          
     </div>
-    
+    <script src="app.js"></script>
 </body>
 </html>
